force-app/main/default/objects/ssot__ConvChannelEngmtSummarySubject__dlm/fields/ssot__ConvChannelEngmtSummaryId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ConvChannelEngmtSummaryId__c</fullName>
    <label>Conv Channel Engagement Summary</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ConvChannelEngmtSummaryId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>