force-app/main/default/objects/ssot__ConvChannelEngmtSummarySubject__dlm/fields/ssot__rel_1731658770221_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731658770221_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ConvChannelEngmtSummarySubject_ConvC_rel</label>
    <referenceTo>ssot__ConvChannelEngagementSummary__dlm</referenceTo>
    <relationshipLabel>ConvChannelEngmtSummarySubject_ConvC_rel</relationshipLabel>
    <relationshipName>rel_1731658770221_end</relationshipName>
    <type>Lookup</type>
</CustomField>