force-app/main/default/objects/ssot__ConvChannelEngmtSummarySubject__dlm/fields/ssot__rel_1731659301272_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731659301272_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ConvChannelEngmtSummarySubject_Subje_rel</label>
    <referenceTo>ssot__Subject__dlm</referenceTo>
    <relationshipLabel>ConvChannelEngmtSummarySubject_Subje_rel</relationshipLabel>
    <relationshipName>rel_1731659301272_end</relationshipName>
    <type>Lookup</type>
</CustomField>