force-app/main/default/objects/ssot__ConvChannelEngmtSummarySubject__dlm/fields/ssot__SubjectDescription__c.field-meta.xml
<CustomField>
    <fullName>ssot__SubjectDescription__c</fullName>
    <label>Subject Description</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SubjectDescription</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>